<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yocs_velocity_smoother</name>
  <version>0.0.1</version>
  <description>
     Bound incoming velocity messages according to robot velocity and acceleration limits.
  </description>
  <author>Sergey Korol</author>
  <maintainer email="serhii.s.korol@gmail.com">Sergey Korol</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
